# rust-bme280-8seg

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
src/: bme280.rs  display.rs  main.rs
